# ai-jsunpack

./: .dockerignore  .example.env  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.base.json
.github/workflows/: release-gate.yml
apps/api/app/: __init__.py  artifact_store.py  auth.py  deployment_smoke.py  main.py  models.py  store.py
apps/browser_runner/: __init__.py  benchmark.py
apps/browser_runner/app/: main.py
apps/web/: index.html  package.json  tsconfig.json
apps/web/dist-i18n/: index.html
apps/web/public/: runtime-config.js
apps/web/src/: App.tsx  ArtifactTextEditor.tsx  api.ts  app-motion.ts  i18n.ts  (+29 more)
config/: ai-jsunpack.example.json  ai-jsunpack.example.yaml
deploy/: README.md  __init__.py  auth_init.py  compose_smoke.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  release_archive.py  release_evidence_manifest.py  release_gate.py  release_readiness.py
deploy/docker/: api.Dockerfile  browser-runner.Dockerfile  web-server.mjs  web-server.test.mjs  web.Dockerfile  worker.Dockerfile
deploy/env/: api.env.example  artifact-store.env.example  browser-runner.env.example  db.env.example  production.env.example  web.env.example  worker.env.example
deploy/firecracker/: README.md  launcher.py
design-system/: MASTER.md
docs/: README.md  api.md  architecture.md  configuration.md  contributing.md  deployment.md  development.md  local-startup.md
scripts/: dev.cmd  dev.mjs  dev.ps1  evaluate_agents.py
tests/: test_agent_process.py  test_agent_runtime.py  test_api_endpoints.py  test_browser_runner_benchmark.py  test_browser_runner_service.py  test_build_validation.py  test_compose_smoke.py  test_configuration.py  test_core_bridge.py  test_database_store.py  test_deployment_config.py  test_deployment_smoke.py  test_docker_auth_init.py  test_firecracker_launcher.py  test_packaging.py  test_reconstruction_feedback.py  test_release_archive.py  test_release_evidence_manifest.py  test_release_gate.py  test_release_readiness.py  test_runtime_smoke.py  test_sandbox_runner.py  test_settings_api.py  test_shared_contracts.py  test_worker_pipeline.py  test_worker_queue.py
(+29 files in other folders)
