[project]
name = "ai-jsunpack"
version = "0.1.0"
description = "AI and Agent assisted JavaScript unpacking and runtime restoration platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "SQLAlchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "playwright>=1.44.0",
  "crewai>=1.14,<2",
  "boto3>=1.43,<2",
  "PyYAML>=6.0,<7"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<1",
  "bandit>=1.7,<2"
]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/worker", "packages"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  ".venv",
  "node_modules",
  "artifacts",
  "tmp"
]

[tool.ruff.lint]
select = ["F", "B904", "B905", "S310"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S310"]
"deploy/**/*.py" = ["S603", "S607"]
"apps/worker/worker/core_bridge.py" = ["S603", "S607"]
"packages/sandbox/runner.py" = ["S603", "S607"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules", "artifacts", "tmp"]
skips = [
  "B101",
  "B105",
  "B112",
  "B404",
  "B603",
  "B607"
]
